append sales template design

--- a/templates/product.php.html
+++ b/templates/product.php.html
@@ -106,6 +106,9 @@
     
     });  // end of  $(document).ready()
     </script>
+    <style type="text/css">
+        td {border: solid #cccccc 1px}
+    </style>
 </head>
 
 <body>
