--- a/trunk/templates/product.php.html
+++ b/trunk/templates/product.php.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/static/css/screen_002.css" type="text/css" media="screen, projection">
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <link type="text/css" href="/static/css/jquery-ui-1.css" rel="Stylesheet">
-    <script type="text/javascript" src="/static/js/jquery-1.js">
+    <script type="text/javascript" src="/static/js/jquery.js">
 </script>
     <script type="text/javascript" src="/static/js/jquery-ui-1.js">
 </script>
@@ -104,6 +104,7 @@
         }
     });
     
+    
     });  // end of  $(document).ready()
     </script>
     <style type="text/css">
@@ -122,42 +123,32 @@
             </div>
 
             <div class="span-2">
-                <a href="http://localhost/hpbranch/customer.php"><img src="/static/images/customer.png" width="45" height="45"><br>
+                <a href="/underconstructor/"><img src="/static/images/customer.png" width="45" height="45"><br>
                 Customers</a>
             </div>
 
             <div class="span-2">
-                <a href="http://localhost/hpbranch/product.php"><img src="/static/images/iphone.png" width="45" height="45"><br>
+                <a href="/product/search/"><img src="/static/images/iphone.png" width="45" height="45"><br>
                 Items</a>
             </div>
 
             <div class="span-2">
-                <a href="http://localhost/hpbranch/report.php"><img src="/static/images/financial.png" width="45" height="45"><br>
+                <a href="/underconstructor/"><img src="/static/images/financial.png" width="45" height="45"><br>
                 Report</a>
             </div>
 
             <div class="span-2">
-                <a href="http://localhost/hpbranch/supplier.php"><img src="/static/images/supplier.png" width="45" height="45"><br>
-                Supplier</a>
-            </div>
-
-            <div class="span-2">
-                <a href="http://localhost/hpbranch/receivings.php"><img src="/static/images/box.png" width="45" height="45"><br>
+                <a href="/underconstructor/"><img src="/static/images/box.png" width="45" height="45"><br>
                 Receivings</a>
             </div>
 
             <div class="span-2">
-                <a href="http://localhost/hpbranch/sales.php"><img src="/static/images/credit.png" width="45" height="45"><br>
+                <a href="/sales/list/"><img src="/static/images/credit.png" width="45" height="45"><br>
                 Sales</a>
             </div>
 
             <div class="span-2">
-                <a href="http://localhost/hpbranch/employees.php"><img src="/static/images/role.png" width="45" height="45"><br>
-                Employees</a>
-            </div>
-
-            <div class="span-2">
-                <a href="http://localhost/hpbranch/store_config.php"><img src="/static/images/setting.png" width="45" height="45"><br>
+                <a href="/admin/"><img src="/static/images/setting.png" width="45" height="45"><br>
                 Store Config</a>
             </div>
         </div>
