1. append Inventory in stock function

--- a/templates/product.php.html
+++ b/templates/product.php.html
@@ -138,7 +138,7 @@
             </div>
 
             <div class="span-2">
-                <a href="/underconstructor/"><img src="/static/images/box.png" width="45" height="45"><br>
+                <a href="/inventory/list/"><img src="/static/images/box.png" width="45" height="45"><br>
                 Receivings</a>
             </div>
 
