test for autocomplete append sales form and bill detail

--- a/templates/product.php.html
+++ b/templates/product.php.html
@@ -16,10 +16,12 @@
     <!-- Import fancy-type plugin for the sample page. -->
     <link rel="stylesheet" href="/static/css/screen_002.css" type="text/css" media="screen, projection">
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/jquery.autocomplete.css">
     <link type="text/css" href="/static/css/jquery-ui-1.css" rel="Stylesheet">
     <script type="text/javascript" src="/static/js/jquery.js">
 </script>
     <script type="text/javascript" src="/static/js/jquery-ui-1.js">
+    <script type="text/javascript" src="/static/js/jquery.autocomplete.js">
 </script>
     <script type="text/javascript">
 
