--- a/trunk/templates/product.php.html
+++ b/trunk/templates/product.php.html
@@ -18,11 +18,10 @@
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <link rel="stylesheet" type="text/css" href="/static/css/jquery.autocomplete.css">
     <link type="text/css" href="/static/css/jquery-ui-1.css" rel="Stylesheet">
-    <script type="text/javascript" src="/static/js/jquery.js">
-</script>
-    <script type="text/javascript" src="/static/js/jquery-ui-1.js">
-    <script type="text/javascript" src="/static/js/jquery.autocomplete.js">
-</script>
+    <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-ui-1.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.autocomplete.js"></script>
+    
     <script type="text/javascript">
 
     $(document).ready(function() {  
