--- a/templates/product.php.html
+++ b/templates/product.php.html
@@ -18,10 +18,10 @@
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <link rel="stylesheet" type="text/css" href="/static/css/jquery.autocomplete.css">
     <link type="text/css" href="/static/css/jquery-ui-1.css" rel="Stylesheet">
+{% block extrastyle %}{% endblock %}
     <script type="text/javascript" src="/static/js/jquery.js"></script>
     <script type="text/javascript" src="/static/js/jquery-ui-1.js"></script>
     <script type="text/javascript" src="/static/js/jquery.autocomplete.js"></script>
-    
     <script type="text/javascript">
 
     $(document).ready(function() {  
@@ -157,10 +157,6 @@
             <div id="dialog" class="window">
 				<!-- put overlap content here -->
             </div>
-        </div>
-
-        <div class="span-24" style="background-color:#4D8FAC;">
-            Welcome Admin <a href="http://localhost/hpbranch/branch_logout.php">Logout</a>
         </div>
 
 
