--- a/trunk/templates/product.php.html
+++ b/trunk/templates/product.php.html
@@ -147,6 +147,10 @@
                 <a href="/admin/"><img src="/static/images/setting.png" width="45" height="45"><br>
                 Store Config</a>
             </div>
+            <div class="span-2">
+                <a href="/admin/logout"><img src="/static/images/logout.png" width="45" height="45"><br>
+                Logout</a>
+            </div>            
         </div>
     </div>
 
