fix sales_form2.html/ inventory_form2.html interface

--- a/templates/product.php.html
+++ b/templates/product.php.html
@@ -129,7 +129,7 @@
             </div>
 
             <div class="span-2">
-                <a href="/underconstructor/"><img src="/static/images/financial.png" width="45" height="45"><br>
+                <a href="/report/daily/"><img src="/static/images/financial.png" width="45" height="45"><br>
                 Report</a>
             </div>
 
