--- a/templates/product.php.html
+++ b/templates/product.php.html
@@ -148,6 +148,10 @@
                 Store Config</a>
             </div>
             <div class="span-2">
+                <a href="/counter/close/"><img src="/static/images/reports.png" width="45" height="45"><br>
+                Logout</a>
+            </div>            
+            <div class="span-2">
                 <a href="/admin/logout"><img src="/static/images/logout.png" width="45" height="45"><br>
                 Logout</a>
             </div>            
