--- a/trunk/templates/product.php.html
+++ b/trunk/templates/product.php.html
@@ -149,7 +149,7 @@
             </div>
             <div class="span-2">
                 <a href="/counter/close/"><img src="/static/images/reports.png" width="45" height="45"><br>
-                Logout</a>
+                Counter</a>
             </div>            
             <div class="span-2">
                 <a href="/admin/logout"><img src="/static/images/logout.png" width="45" height="45"><br>
