--- a/trunk/templates/product.php.html
+++ b/trunk/templates/product.php.html
@@ -115,7 +115,7 @@
 
 <body>
     <div id="mask"></div>
-
+{% block link %}
     <div class="span-30" id="lineshadow" style="width:100%;height:70px;">
         <div class="prepend-2 span-24" id="staffmenu" align="center">
             <div class="span-4" style="color:black;font-family:arial;font-size:12px;">
@@ -157,7 +157,7 @@
             </div>            
         </div>
     </div>
-
+    {% endblock %} 
     <div class="container" style="margin-top:10px;">
         <div id="boxes">
             <!-- #customize your modal window here -->
