--- a/templates/product.php.html
+++ b/templates/product.php.html
@@ -144,6 +144,11 @@
             </div>
 
             <div class="span-2">
+                <a href="/invoice/list/"><img src="/static/images/credit.png" width="45" height="45"><br>
+                Invoice</a>
+            </div>			
+
+            <div class="span-2">
                 <a href="/admin/"><img src="/static/images/setting.png" width="45" height="45"><br>
                 Store Config</a>
             </div>
