--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/jquery.autocomplete.css">
     <link type="text/css" href="/static/css/jquery-ui-1.css" rel="Stylesheet">			
     
-	<div class="span-30" id="lineshadow" style="width:100%;height:70px;">
+    <div class="span-30" id="lineshadow" style="width:100%;height:70px;">
         <div class="prepend-2 span-24" id="staffmenu" align="center">
             <div class="span-4" style="color:black;font-family:arial;font-size:12px;">
                 Handphone Shop<br>
@@ -25,7 +25,7 @@
             </div>
 
             <div class="span-2">
-                <a href="/underconstructor/"><img src="/static/images/financial.png" width="45" height="45"><br>
+                <a href="/report/"><img src="/static/images/financial.png" width="45" height="45"><br>
                 Report</a>
             </div>
 
@@ -40,9 +40,22 @@
             </div>
 
             <div class="span-2">
+                <a href="/invoice/list/"><img src="/static/images/Invoices.png" width="45" height="45"><br>
+                Invoice</a>
+            </div>			
+
+            <div class="span-2">
                 <a href="/admin/"><img src="/static/images/setting.png" width="45" height="45"><br>
                 Store Config</a>
             </div>
+            <div class="span-2">
+                <a href="/counter/close/"><img src="/static/images/reports.png" width="45" height="45"><br>
+                Counter</a>
+            </div>            
+            <div class="span-2">
+                <a href="/admin/logout"><img src="/static/images/logout.png" width="45" height="45"><br>
+                Logout</a>
+            </div>            
         </div>
     </div>
     <div class="container" style="margin-top:10px;">
