--- a/templates/product.php.html
+++ b/templates/product.php.html
@@ -144,7 +144,7 @@
             </div>
 
             <div class="span-2">
-                <a href="/invoice/list/"><img src="/static/images/credit.png" width="45" height="45"><br>
+                <a href="/invoice/list/"><img src="/static/images/Invoices.png" width="45" height="45"><br>
                 Invoice</a>
             </div>			
 
