--- a/trunk/templates/admin/base_site.html
+++ b/trunk/templates/admin/base_site.html
@@ -21,40 +21,40 @@
 
             <div class="span-2">
                 <a href="/product/search/"><img src="/static/images/iphone.png" width="45" height="45"><br>
-                Items</a>
+                <span style="color:blue">Items</span></a>
             </div>
 
             <div class="span-2">
                 <a href="/report/"><img src="/static/images/financial.png" width="45" height="45"><br>
-                Report</a>
+                <span style="color:blue">Report</span></a>
             </div>
 
             <div class="span-2">
                 <a href="/inventory/list/"><img src="/static/images/box.png" width="45" height="45"><br>
-                Receivings</a>
+                <span style="color:blue">Receivings</span></a>
             </div>
 
             <div class="span-2">
                 <a href="/sales/list/"><img src="/static/images/credit.png" width="45" height="45"><br>
-                Sales</a>
+                <span style="color:blue">Sales</span></a>
             </div>
 
             <div class="span-2">
                 <a href="/invoice/list/"><img src="/static/images/Invoices.png" width="45" height="45"><br>
-                Invoice</a>
+                <span style="color:blue">Invoice</span></a>
             </div>			
 
             <div class="span-2">
                 <a href="/admin/"><img src="/static/images/setting.png" width="45" height="45"><br>
-                Store Config</a>
+                <span style="color:blue">Store Config</span></a>
             </div>
             <div class="span-2">
                 <a href="/counter/close/"><img src="/static/images/reports.png" width="45" height="45"><br>
-                Counter</a>
+                <span style="color:blue">Counter</span></a>
             </div>            
             <div class="span-2">
                 <a href="/admin/logout"><img src="/static/images/logout.png" width="45" height="45"><br>
-                Logout</a>
+                <span style="color:blue">Logout</span></a>
             </div>            
         </div>
     </div>
