--- a/templates/static/css/style.css
+++ b/templates/static/css/style.css
@@ -433,8 +433,9 @@ color:white;
 #staffmenu{
 width:94%;
   background: -moz-linear-gradient(top, #294c6f 20%, #5f91c4 100%);
-  background: -webkit-gradient(linear, left top, left bottom, from(#35425d), to(#fff));
- color:white;
+  background: -webkit-gradient(linear, left top, left bottom, from(#294c6f), to(#5f91c4));
+  background-color: #5f91c4;
+  color:white;
 }
 
 #staffmenu a{
