--- a/trunk/templates/product.php.html
+++ b/trunk/templates/product.php.html
@@ -125,40 +125,40 @@
 
             <div class="span-2">
                 <a href="/product/search/"><img src="/static/images/iphone.png" width="45" height="45"><br>
-                <span style="color:blue">Items</span></a>
+                Items</a>
             </div>
 
             <div class="span-2">
                 <a href="/report/"><img src="/static/images/financial.png" width="45" height="45"><br>
-                <span style="color:blue">Report</span></a>
+                Report</a>
             </div>
 
             <div class="span-2">
                 <a href="/inventory/list/"><img src="/static/images/box.png" width="45" height="45"><br>
-                <span style="color:blue">Receivings</span></a>
+                Receivings</a>
             </div>
 
             <div class="span-2">
                 <a href="/sales/list/"><img src="/static/images/credit.png" width="45" height="45"><br>
-                <span style="color:blue">Sales</span></a>
+                Sales</a>
             </div>
 
             <div class="span-2">
                 <a href="/invoice/list/"><img src="/static/images/Invoices.png" width="45" height="45"><br>
-                <span style="color:blue">Invoice</span></a>
+                Invoice</a>
             </div>			
 
             <div class="span-2">
                 <a href="/admin/"><img src="/static/images/setting.png" width="45" height="45"><br>
-                <span style="color:blue">Store Config</span></a>
+                Store Config</a>
             </div>
             <div class="span-2">
                 <a href="/counter/close/"><img src="/static/images/reports.png" width="45" height="45"><br>
-                <span style="color:blue">Counter</span></a>
+                Counter</a>
             </div>            
             <div class="span-2">
                 <a href="/admin/logout"><img src="/static/images/logout.png" width="45" height="45"><br>
-                <span style="color:blue">Logout</span></a>
+                Logout</a>
             </div>            
         </div>
     </div>
