--- a/trunk/templates/admin/base_site.html
+++ b/trunk/templates/admin/base_site.html
@@ -25,11 +25,6 @@
             </div>
 
             <div class="span-2">
-                <a href="/report/"><img src="/static/images/financial.png" width="45" height="45"><br>
-                Report</a>
-            </div>
-
-            <div class="span-2">
                 <a href="/inventory/list/"><img src="/static/images/box.png" width="45" height="45"><br>
                 Receivings</a>
             </div>
@@ -37,21 +32,28 @@
             <div class="span-2">
                 <a href="/sales/list/"><img src="/static/images/credit.png" width="45" height="45"><br>
                 Sales</a>
-            </div>
-
+            </div>			
+			
             <div class="span-2">
+                <a href="/counter/close/"><img src="/static/images/reports.png" width="45" height="45"><br>
+                Counter</a>
+            </div> 
+			
+            <div class="span-2">
+                <a href="/report/"><img src="/static/images/financial.png" width="45" height="45"><br>
+                Report</a>
+            </div>
+			
+            <!--div class="span-2">
                 <a href="/invoice/list/"><img src="/static/images/Invoices.png" width="45" height="45"><br>
                 Invoice</a>
-            </div>			
+            </div-->			
 
             <div class="span-2">
                 <a href="/admin/"><img src="/static/images/setting.png" width="45" height="45"><br>
                 Store Config</a>
             </div>
-            <div class="span-2">
-                <a href="/counter/close/"><img src="/static/images/reports.png" width="45" height="45"><br>
-                Counter</a>
-            </div>            
+
             <div class="span-2">
                 <a href="/admin/logout"><img src="/static/images/logout.png" width="45" height="45"><br>
                 Logout</a>
