--- a/trunk/templates/admin/base_site.html
+++ b/trunk/templates/admin/base_site.html
@@ -25,12 +25,12 @@
             </div>
 
             <div class="span-2">
-                <a href="/inventory/list/"><img src="/static/images/box.png" width="45" height="45"><br>
+                <a href="/inventory/"><img src="/static/images/box.png" width="45" height="45"><br>
                 Receivings</a>
             </div>
 
             <div class="span-2">
-                <a href="/sales/list/"><img src="/static/images/credit.png" width="45" height="45"><br>
+                <a href="/sales/"><img src="/static/images/credit.png" width="45" height="45"><br>
                 Sales</a>
             </div>			
 			
