--- a/templates/product.php.html
+++ b/templates/product.php.html
@@ -6,7 +6,7 @@
     <meta name="generator" content="HTML Tidy for Linux/x86 (vers 25 March 2009), see www.w3.org">
     <meta http-equiv="content-type" content="text/html; charset=us-ascii">
 
-    <title>HANDPHONE CMS</title>
+    <title>Py-POS System v1.0</title>
     <meta name="Generator" content="EditPlus">
     <meta name="Author" content="">
     <meta name="Keywords" content="">
@@ -119,9 +119,12 @@
     <div class="span-30" id="lineshadow" style="width:100%;height:70px;">
         <div class="prepend-2 span-24" id="staffmenu" align="center">
             <div class="span-4" style="color:black;font-family:arial;font-size:12px;">
-                Handphone Shop<br>
-                Powered by Valuesys
+				<span style="visibility: hidden">
+					Handphone Shop<br>
+					Powered by Valuesys
+				</span>
             </div>
+			
 
             <div class="span-2">
                 <a href="/product/search/"><img src="/static/images/iphone.png" width="45" height="45"><br>
