--- a/templates/product.php.html
+++ b/templates/product.php.html
@@ -110,6 +110,10 @@
     </script>
     <style type="text/css">
         td {border: solid #cccccc 1px}
+	#error_msg{
+	background: red;
+	color: white;
+	text-align: center;
     </style>
 </head>
 
