nick shop is to specify, we have to branch it

--- a/templates/static/css/print.css
+++ b/templates/static/css/print.css
@@ -67,3 +67,21 @@ td{
 	width: auto;
 }
 
+#void_bill_form_table{
+	display: none;
+}
+
+#AppendExtraCost{
+	display: none;
+}
+
+input[type=text]{
+    font-size: 12pt;
+    text-align: right;
+    border-style: none;
+    background:none;
+}
+
+input[type=submit]{
+    display: none;
+}
