--- a/branches/nick/templates/product.php.html
+++ b/branches/nick/templates/product.php.html
@@ -167,7 +167,7 @@
             </div>
 
             <div class="span-2">
-                <a href="/admin/logout"><img src="/static/images/logout.png" width="45" height="45"><br>
+                <a href="/admin/logout/"><img src="/static/images/logout.png" width="45" height="45"><br>
                 Logout</a>
             </div>            
         </div>
