apply scheduling module change

--- a/branches/refactory-1.0/templates/product.php.html
+++ b/branches/refactory-1.0/templates/product.php.html
@@ -105,7 +105,9 @@
             $('#deleteForm').submit();
         }
     });
-    
+
+    {% block jquery_ready %}      
+    {% endblock %}          
     
     });  // end of  $(document).ready()
     </script>
