apply change to clothes shop

--- a/branches/clothes/templates/product.php.html
+++ b/branches/clothes/templates/product.php.html
@@ -162,7 +162,10 @@
                 <a href="/invoice/list/"><img src="/static/images/Invoices.png" width="45" height="45"><br>
                 Invoice</a>
             </div -->			
-
+            <div class="span-2">
+                <a href="/workflow/jobs/"><img src="/static/images/setting.png" width="45" height="45"><br>
+                JOBS</a>
+            </div>
             <div class="span-2">
                 <a href="/admin/"><img src="/static/images/setting.png" width="45" height="45"><br>
                 Store Config</a>
